css/style.css
/* *, *:before, *:after {
  box-sizing: inherit;
} */

a:hover {
  text-decoration: none;
}

body {
  text-align: center;
  font-family: sans-serif;
}

h2 {
  /* color: #5B231C; */
  color: #8B4A22;
}

hr {
  color: #F7F5DE;
  border-style: none;
  border-top: 6px dotted;
  width: 4%;
}

html {
  scroll-behavior: smooth;
  box-sizing: border-box;
}

.container-fluid {
  padding: 7% 25%;
}

.navbar {
  padding-left: 25%;
  padding-right: 25%;
  transition: top 0.5s;
  background-color: #CB9535;
}


/* TITLE */

#title {
  background-color: #CB9535;
}

.title-heading {
  color: white;
  font-size: 7rem;
  line-height: 1.5;
  font-family: 'Dancing Script', cursive;
}

.title-p {
  /* color: white; */
  font-size: 1.5rem;
  line-height: 1.25;
  padding-bottom: 3rem;
}

.top-container {
  position: relative;
  height: 510px;
}


/* ABOUT ME */

.pipe-organ-image {
  border-radius: 50%;
  width: 15em;
  height: 15em;
  margin-bottom: 20px;
}

.section-heading {
  font-size: 3rem;
  line-height: 1.5;
  padding-bottom: 2rem;
}

.section-p {
  font-size: 1.5rem;
  line-height: 1.25;
  padding-bottom: 3rem;
}

/* REPERTOIRE */

table {
  position: relative;
  table-layout: fixed;
  text-align: left;
  width: 100%;
}

th, td {
  padding: 15px;
}

.table-area {
  padding: 0 7%;
}

/* CONTACT */


.mailto-button {
  margin-top: 4rem;
  /* background-color: #995C30; */
  background-color: #CB9535;

  border: 0;
}

.mailto-button:hover {
  background-color: #995C30;
}
/* FOOTER */

#footer {
  padding: 2% 0 1%;
  background-color: #F7F5DE;
}

.social-media {
  padding: 1%;
}

.social-icon {
  padding: 0 10px 5px;
  color: #995C30;
  /* color: #B27527; */
  /* color: #CB9535; */
  font-size: 1.25rem;
}

.social-icon:hover {
  /* color: #8B4A22; */
  color: #CB9535;
}

.copyright {
  font-size: 0.75rem;
  color: #grey;
}

@media only screen and (max-width: 991px) {

  hr {
    width: 6%;
  }

  .navbar {
    padding-left: 5%;
    padding-right: 5%;
  }

  .container-fluid {
    padding: 7%;
  }

  .title-heading {
    color: white;
    font-size: 6rem;
    padding-top: 45px;
  }

}

